# miniserve

./: .gitignore  CLAUDE.md  MECHANICS.md  README.md  pyproject.toml
docs/: overview.md  phase0-mechanics.md  phase1-engine.md  phase2-cost-model.md
miniserve/: __init__.py  engine.py  kv_cache.py  metrics.py  model.py  scheduler.py  server.py
miniserve/bench/: __init__.py  activation_probe.py  calibrate.py  collision_check.py  costmodel.py  decode_probe.py  fake.py  gpu_day.py  plot.py  run.py  smoke.py  spot_validate.py  static.py  sweep.py  transfer_probe.py  workload.py
results/: collisions.txt  mechanism_sweep.jsonl  occupancy.txt
results/cpu_validation/: decode.json  prefill.json  transfer.json
results/gpu_day/: activation_peak.json  cost_model.json  decode.json  prefill.json  spot_validation.json  transfer.json
tests/: test_bench.py  test_calibrate.py  test_costmodel.py  test_engine.py  test_golden_real.py  test_kv_cache.py  test_model.py  test_probes.py  test_scheduler.py  test_server.py  test_smoke.py
