[project]
name = "miniserve"
version = "0.0.1"
description = "Continuous-batching LLM inference engine with a paged KV cache, from scratch, single GPU, PyTorch."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# torch and transformers land with the first real code in model.py;
# the scaffold stays light until then.
dependencies = [
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "torch>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miniserve"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
